bad/mod_invalid_types_string_null.example_compiler_output
ERROR
[1mbad/mod_invalid_types_string_null.lat:3:5: [1;31merror: [0;1mmodulo is defined only for int values, not `string` and `null`[m
	"" % null;
	   [1;32m^[m
